--- a/module3-solution/css/mystyle.css
+++ b/module3-solution/css/mystyle.css
@@ -1,6 +1,6 @@
 .content {
   margin:  20px;
-  background-color: #999999;
+  background-color: rgba(138, 96, 81, 0.78);
   height: auto;
   padding: 10px;
 
