--- a/module3-solution/css/mystyle.css
+++ b/module3-solution/css/mystyle.css
@@ -1,8 +1,8 @@
 .content {
-  margin:  20px;
+  margin:  15px;
   background-color: rgba(138, 96, 81, 0.78);
   height: auto;
-  padding: 10px;
+  padding: 15px;
 
   color: black;
 }
@@ -11,11 +11,34 @@
   margin: 0px 20px 0px 20px;
 }
 .container-fluid > .navbar-header > .navbar-brand{
-  font-size: 30px;
+  font-size: 20px;
 
 }
-@media (max-width: 767px) {
-  .content {
-    margin: 40px;
-  }
+
+
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
+}
+
+.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: #f9f0ff;
+}
+  
+.menu-item-description {
+    text-align: center;
+    border: 1px solid black;
+    background-color: rgba(138, 96, 81, 0.78);
+    font-family: Helvetica;
+    color:#080808;
+    margin-top: 10px;
+}
+
+body {
+   
+    background-color: #f9f0ff;
 }
